Bugfix: dialogs can be scrolled off-screen

--- a/themes/material.css
+++ b/themes/material.css
@@ -193,6 +193,7 @@ nav hr {
  */
 
 dialog {
+  position: fixed;
   width: 70%;
   height: auto;
   min-height: 100px;
