--- a/themes/vanilla.css
+++ b/themes/vanilla.css
@@ -154,6 +154,7 @@ h5 {
  */
 
 dialog {
+  position: fixed;
   width: 70%;
   height: auto;
   min-height: 100px;
